Revert "Remove the admin realtime metrics HTTP endpoint."
This reverts commit df10b48c54586581cde42eda16e489fd46093bf4.
